# WeaklyTypedFloat

./: .buildinfo  .gitignore  .licenserc.yaml  CMakeLists.txt  README.md  adding_a_new_type.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  writing_a_visitor.html
.github/workflows/: merge.yaml  pull_request.yaml
_sources/: index.rst.txt
_sources/developer/: architecture.rst.txt
cmake/: WeaklyTypedFloatConfig.cmake.in  catch2_tests_from_dir.cmake  disable_in_source_builds.cmake  get_dependencies.cmake  get_nwx_cmake.cmake  install_target.cmake
cmake/dependencies/: catch2.cmake
developer/: architecture.html  index.html  operations.html  scope.html  statement_of_need.html  type_erasure.html
docs/: Makefile  README.md
docs/source/: adding_a_new_type.rst  conf.py  index.rst  writing_a_visitor.rst
include/weakly_typed_float/: weakly_typed_float.hpp
include/wtf/: concepts.hpp  float.hpp  float_view.hpp  forward.hpp  types.hpp  warnings.hpp  wtf.hpp
src/: weakly_typed_float.cpp
src/wtf/: float.cpp  wtf.cpp
tests/: CMakeLists.txt  test_weakly_typed_float.cpp  test_wtf.hpp
wtf_cxx_api/: annotated.html  buffer_2float__buffer_8hpp_source.html  buffer_8hpp_source.html  buffer__holder_8hpp_source.html  buffer__view_8hpp_source.html  buffer__view__holder_8hpp_source.html  classes.html  classwtf_1_1buffer_1_1BufferView-members.html  classwtf_1_1buffer_1_1BufferView.html  classwtf_1_1buffer_1_1FloatBuffer-members.html  classwtf_1_1buffer_1_1FloatBuffer.html  classwtf_1_1buffer_1_1detail___1_1BufferHolder-members.html  classwtf_1_1buffer_1_1detail___1_1BufferHolder.html  classwtf_1_1buffer_1_1detail___1_1BufferHolder__inherit__graph.map  classwtf_1_1buffer_1_1detail___1_1BufferHolder__inherit__graph.md5  classwtf_1_1buffer_1_1detail___1_1BufferViewHolder-members.html  classwtf_1_1buffer_1_1detail___1_1BufferViewHolder.html  classwtf_1_1buffer_1_1detail___1_1ContiguousModel-members.html  classwtf_1_1buffer_1_1detail___1_1ContiguousModel.html  classwtf_1_1buffer_1_1detail___1_1ContiguousModel__coll__graph.map  classwtf_1_1buffer_1_1detail___1_1ContiguousModel__coll__graph.md5  classwtf_1_1buffer_1_1detail___1_1ContiguousViewModel-members.html  classwtf_1_1buffer_1_1detail___1_1ContiguousViewModel.html  classwtf_1_1buffer_1_1detail___1_1ContiguousViewModel__coll__graph.md5  classwtf_1_1buffer_1_1detail___1_1ContiguousViewModel__inherit__graph.map  classwtf_1_1detail___1_1DispatchHelper-members.html  classwtf_1_1detail___1_1DispatchHelper.html  classwtf_1_1fp_1_1Float-members.html  classwtf_1_1fp_1_1Float.html  classwtf_1_1fp_1_1FloatBase-members.html  classwtf_1_1fp_1_1FloatBase.html  classwtf_1_1fp_1_1FloatView-members.html  classwtf_1_1fp_1_1FloatView.html  classwtf_1_1fp_1_1FloatView__coll__graph.map  classwtf_1_1fp_1_1FloatView__inherit__graph.md5  classwtf_1_1fp_1_1Float__inherit__graph.map  classwtf_1_1fp_1_1Float__inherit__graph.md5  classwtf_1_1fp_1_1detail___1_1FloatHolder-members.html  classwtf_1_1fp_1_1detail___1_1FloatHolder.html  classwtf_1_1fp_1_1detail___1_1FloatHolder__inherit__graph.map  (+233 more)
wtf_cxx_api/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  (+44 more)
(+89 files in other folders)
